Improve SplitView resizing behavior

- Adjust sizes before applying them into items to keep the items
  inside minimum and maximum sizes. Also avoids calling items
  setWidth/setHeight multiple times during layout.
- Enforce items staying inside SplitView size instead of having
  preferred size initially and enfocing only after handle resizes.
- Don't resize handles in componentComplete as sizes are not
  correct yet and initial resizing is done in createHandleItem.
- Adjust autotests to pass now that size limits are enforced.
  Width getting value of preferredWidth requires polish.

Task-number: QTBUG-89699
Task-number: QTBUG-107836
Pick-to: 6.6
Change-Id: Ifaf3a6b185014216baa0671c6d4912f99465d0d5
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>