src/quicktemplates/qquicksplitview_p_p.h
@@ -31,6 +31,7 @@ public:
     void updateFillIndex();
     void layoutResizeSplitItems(qreal &usedWidth, qreal &usedHeight, int &indexBeingResizedDueToDrag);
     void layoutResizeFillItem(QQuickItem *fillItem, qreal &usedWidth, qreal &usedHeight, int indexBeingResizedDueToDrag);
+    void limitAndApplySizes(qreal usedWidth, qreal usedHeight);
     void layoutPositionItems(const QQuickItem *fillItem);
     void requestLayout();
     void layout();
@@ -59,6 +60,13 @@ public:
         qreal effectiveMaximumHeight;
     };
 
+    // Used during the layout
+    struct LayoutData {
+        qreal width = 0;
+        qreal height = 0;
+        bool wasResizedByHandle = false;
+    };
+
     EffectiveSizeData effectiveSizeData(const QQuickItemPrivate *itemPrivate,
         const QQuickSplitViewAttached *attached) const;
 
@@ -80,6 +88,7 @@ public:
     Qt::Orientation m_orientation = Qt::Horizontal;
     QQmlComponent *m_handle = nullptr;
     QList<QQuickItem*> m_handleItems;
+    QHash<QQuickItem*, LayoutData> m_layoutData;
     int m_hoveredHandleIndex = -1;
     int m_pressedHandleIndex = -1;
     int m_nextVisibleIndexAfterPressedHandle = -1;
